kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-longhorn
spec:
  hostnames:
    - longhorn.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
